fix(stories): correctly align cards to start

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -136,7 +136,6 @@ ol[role="list"] {
 .stories {
     display: grid;
     grid-template-columns: repeat(auto-fill, 128px);
-    align-items: center;
     gap: 24px;
     justify-content: center;
     padding: spacing(2);
